# viewer

./: .gitignore  INTERNALS.md  README.md  straddle.yaml
browser/: package.json
browser/src/lib/: markdown.ts
browser/src/modules/: viewer.ts
browser/src/panels/: ViewerWindow.vue
esp-idf/: CMakeLists.txt  idf_component.yml  project_include.cmake
esp-idf/conditional/spangap-lcd/include/: viewer_app.h
esp-idf/conditional/spangap-lcd/src/: viewer_lcd.cpp
esp-idf/conditional/spangap-net/src/: fetch.cpp
esp-idf/conditional/spangap-web/include/: viewer_web.h
esp-idf/conditional/spangap-web/src/: md_transform.cpp
esp-idf/data/webroot/: ABOUT.md  WELCOME.md
esp-idf/include/: viewer.h  viewer_net.h
esp-idf/src/: viewer.cpp
